--- a/src/pretty-info-panel/pretty-infopanel.component.html
+++ b/src/pretty-info-panel/pretty-infopanel.component.html
@@ -1,6 +1,14 @@
-<div [hidden]="!isVisible()" class="card mainpanel">
+<div [hidden]="!isVisible()" class="card hs-main-panel">
   <hs-panel-header name="pretty-info" [title]="'INFOPANEL.info' | translate"></hs-panel-header>
-  <div class="card-body">
-    TODO
+  <div *ngIf="noFeatureSelected()" class="card-body">
+    <div class="d-flex flex-column align-items-center p-4">
+      <i class="icon-cursor bg-primary p-3 text-white rounded " style="font-size: x-large; color:hsl(208, 100%, 97%)"></i>
+      <p class="h4">No features selected</p>
+      <p class="small">{{'QUERY.infoPanel.clickOnMap' | translate}}</p>
+    </div>
+  </div>
+  <div *ngIf="hsQueryBaseService.data.features.length > 0" class="card-body">
+    <spoi-pretty-infopanel-feature *ngFor="let feature of hsQueryBaseService.data.features" [feature]="feature">
+    </spoi-pretty-infopanel-feature>
   </div>
 </div>
